# storage/api-docs/api-docs.json
@@ -2686,20 +2686,6 @@
                     {
                         "name": "type",
                         "in": "query",
-                        "description": "نوع پست‌ها (منتشر شده یا پیش‌نویس)",
-                        "required": false,
-                        "schema": {
-                            "type": "string",
-                            "enum": [
-                                "published",
-                                "draft"
-                            ],
-                            "example": "published"
-                        }
-                    },
-                    {
-                        "name": "type",
-                        "in": "query",
                         "description": "نوع عضو برای فیلتر کردن لیست",
                         "required": false,
                         "schema": {
